Bug 321132 Japanese font grouping is not correct on font pref dialog. patch by Masatoshi Kimura (emk) <VYV03354@nifty.ne.jp> r+sr=rbs